# hayweb

./: Cargo.toml  README.md  hayashi.toml
.github/workflows/: ci.yml  release.yml
examples/: http_requests.hay  scraping.hay
src/: lib.rs
