[package]
name = "hayweb"
version = "0.2.0"
edition = "2021"
description = "Web scraping and HTTP plugin for Hayashi"
license = "MIT"
repository = "https://github.com/sheep-farm/hayweb"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { path = "/home/flavop/GitHub/hayashi-plugin-sdk/sdk" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
