[package]
name = "hayweb"
version = "0.2.0"
edition = "2021"
description = "Web scraping and HTTP plugin for Hayashi"
license = "MIT"
repository = "https://github.com/sheep-farm/hayweb"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk", tag = "v0.2.1" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
